# AudioConcept

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  environment_mac.yml  pyproject.toml  requirements.txt
AudioConcept/: __init__.py  augmentation.py  config.py  dataset.py  evaluate.py  features.py  plots.py  predict.py  train.py  train2.py  train_2.py
AudioConcept/llm_experiment/: dataset_2.py  train2.py  train_2.py
AudioConcept/modeling/: augmentation.py  model_cnn.py  model_vggish.py  predict.py  svm_classifier.py  train.py
AudioConcept/models/: classifier_svm.py  model_cnn.py  model_cnn2.py  model_cnn3.py  model_vggish.py
XAI/: NN_prediction_visualizer.py  cnn_gradcam.py  featureExtractor.py  test_gradcam.py  xaiBeeswarm.py  xaiHeatmap.py  xaiWaterfall.py  xai_beeswarm.py  xai_waterfall.py
cnn_classifier_mamo/: .gitignore  README.md  config.py  evaluate.py  get_data.sh  gtzan_loader.py  model_cnn.py  model_vggish.py  requirements.txt  train.py  vgg_model.py
data/processed/: processed_audio.csv  processed_audio_scaled.csv  processed_dataset.csv  processed_dataset_reduced.csv  scaler.pkl  (+1 more)
demo/: app.py
docs/: DesignProposal.md  Experiments.md  Worklog_status.md  XAI_results.md  worklog.md
models/: svm_genre_classifier.pkl
notebooks/: 1.0-js-cnn.ipynb  1.0-js-svm-classifier.ipynb  1.0-js-torch-tut.ipynb  1.0-js-vgg.ipynb  1.1-explanation_svm.ipynb  1.1-js-vgg.ipynb  1.1-son.ipynb  1.2-js-son.ipynb  1.2-son.ipynb  2.0-es-svm-audiolime.ipynb  svm_classifier.ipynb
scripts/: get_data.sh  run_experiments.sh  vgg_regularization_exp.sh
(+12 files in other folders)
