[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "AudioConcept"
version = "1.0.0"
description = "Locating Musical Concepts in a Genre Classifier"
authors = [
  { name = "I. Lengiewicz, J. Stusio" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["AudioConcept"]
include = ["pyproject.toml", "AudioConcept/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["AudioConcept"]
force-sort-within-sections = true

